# ghostgates

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  SECURITY.md  ghostgates-policy.example.yml  pyproject.toml
.github/workflows/: ghostgates-scan.yml
ghostgates/: __init__.py  cli.py  config.py
ghostgates/client/: __init__.py  github_client.py  rate_limiter.py
ghostgates/collectors/: __init__.py  assembly.py  environments.py  org.py  repos.py  workflows.py
ghostgates/engine/: __init__.py  registry.py  urls.py
ghostgates/engine/rules/: __init__.py  branch_protection.py  environment.py  oidc.py  workflow.py
ghostgates/models/: __init__.py  enums.py  findings.py  gates.py
ghostgates/policy/: __init__.py  evaluator.py  formatter.py  schema.py
ghostgates/reporting/: __init__.py  diff.py  formatter.py  graph.py  rank.py  recon.py  sarif.py
ghostgates/storage/: __init__.py  sqlite_store.py
tests/: conftest.py  test_assembly_storage.py  test_cli_reporting.py  test_collectors_env.py  test_collectors_repo.py  test_collectors_workflows.py  test_diff.py  test_engine_bp_rules.py  test_engine_env_wf_oidc.py  test_github_client.py  test_graph.py  test_integration.py  test_policy_audit.py  test_rank.py  test_recon.py  test_sarif.py  test_supply_chain_rules.py
tests/mocks/: gate_models.py
